Chore #37 : BE Typescript 설정 추가
- typescript, ts-node 패키지 설치
- @types/cookie-parser 설치
- @types/morgan 설치

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["naver", "prettier"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "prettier/prettier": ["error"]
   }
