--- a/server/package.json
+++ b/server/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js",
-    "dev": "nodemon ./app.js"
+    "prestart": "tsc",
+    "start": "node dist/src/app.js",
+    "dev": "nodemon src/app.ts",
+    "build": "tsc -p ."
   },
   "husky": {
     "hooks": {
@@ -12,9 +14,11 @@
     }
   },
   "lint-staged": {
-    "*.js": "eslint --fix"
+    "*.ts": "eslint --fix"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/morgan": "^1.9.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -24,6 +28,10 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.14.5",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
     "eslint-config-naver": "^2.1.0",
     "eslint-config-prettier": "^6.14.0",
@@ -31,6 +39,8 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "nodemon": "^2.0.6",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   }
 }
