--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,8 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
