Feat #32 : 회원가입 API 구현
- routes, controller, service 계층구조 사용
- 회원가입시 패스워드 bcrypt로 암호화

--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/morgan": "^1.9.1",
+    "bcrypt": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
