Chore #noissue: 환경설정 수정
- eslint, prettier 설정 변경
- EOL 문제 해결

--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -3,6 +3,9 @@
   "plugins": ["prettier", "@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error", {
+      "endOfLine": "auto"
+    }],
+    "linebreak-style": ["error", "windows"]
   }
 }
