--- a/server/.prettierrc
+++ b/server/.prettierrc
@@ -4,5 +4,6 @@
   "semi": true,
   "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "endOfLine":"auto"
 }
