Style #noissue : elintrc 파일 수정
- eslintrc  endOfLine : auto 속성 추가
- SignInPage lint 적용

--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -4,5 +4,8 @@
   "semi": true,
   "useTabs": false,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "prettier/prettier": ["error", {
+    "endOfLine":"auto"
+  }],
 }
