--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -2,7 +2,8 @@
   "extends": ["naver", "prettier", "plugin:react/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"],
-    "endOfLine": "auto"
+    "prettier/prettier": ["error",{
+          "endOfLine":"auto"
+    }],
   }
 }
