--- a/server/package.json
+++ b/server/package.json
@@ -34,14 +34,15 @@
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "@types/passport-github": "^1.1.5",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.5",
     "@types/passport": "^1.0.4",
+    "@types/passport-github": "^1.1.5",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
