--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "babel-polyfill": "^6.26.0",
     "eslint-config-naver": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.0"
