--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "@types/passport-github": "^1.1.5",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
