--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -2,8 +2,13 @@
   "extends": ["naver", "prettier", "plugin:react/recommended"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error",{
-        "endOfLine":"auto"
-    }],
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "consistent-return": 0,
+    "linebreak-style": 0
   }
 }
