--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "axios": "^0.21.0",
     "babel-polyfill": "^6.26.0",
     "eslint-config-naver": "^2.1.0",
+    "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.0"
   },
