Chore #noissue : eslint 규칙 추가
- import/prefer-default-export 규칙 off로 설정

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -9,6 +9,7 @@
       }
     ],
     "consistent-return": 0,
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "import/prefer-default-export": "off"
   }
 }
