--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart": "tsc",
-    "start": "node dist/src/app.js",
-    "dev": "nodemon src/app.ts",
-    "build": "tsc -p ."
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "husky": {
     "hooks": {
@@ -17,12 +15,13 @@
     "*.ts": "eslint --fix"
   },
   "_moduleAliases": {
-    "@utils": "dist/src/utils",
-    "@api": "dist/src/api",
-    "@middlewares": "dist/src/middlewares",
-    "@sequelize": "dist/src/sequelize",
-    "@services": "dist/src/services",
-    "@repositories": "dist/src/repositories"
+    "@utils": "src/utils",
+    "@api": "src/api",
+    "@middlewares": "src/middlewares",
+    "@sequelize": "src/sequelize",
+    "@services": "src/services",
+    "@repositories": "src/repositories",
+    "@passport": "src/middlewares/passport"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -43,20 +42,6 @@
     "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.5",
-    "@types/passport": "^1.0.4",
-    "@types/passport-github": "^1.1.5",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
-    "@types/validator": "^13.1.0",
-    "@typescript-eslint/eslint-plugin": "^4.6.0",
-    "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
     "eslint-config-naver": "^2.1.0",
     "eslint-config-prettier": "^6.14.0",
@@ -64,8 +49,6 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "nodemon": "^2.0.6",
-    "prettier": "^2.1.2",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5"
+    "prettier": "^2.1.2"
   }
 }
