Refactor #noissue : sequelize 모델 리팩토링
- 기존의 define으로 모델 정의 -> class 형태로 모델 정의하도록 변경

--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,7 @@
     "@middlewares": "src/middlewares",
     "@sequelize": "src/sequelize",
     "@services": "src/services",
-    "@repositories": "src/repositories",
+    "@models": "src/sequelize/models",
     "@passport": "src/middlewares/passport"
   },
   "dependencies": {
