Fix #78 : GitHub Passport 전략 수정
- 기존 방식은 GitHub 프로필에 이메일을 등록한 유저의 email만 가져올 수 있는 문제가 있었다.
- GitHub Api를 사용해서 이메일을 등록하지 않은 유저의 이메일도 가져올 수 있도록 구현함.

--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "passport-github": "^1.1.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "request-promise": "^4.2.6",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0"
   },
