--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "babel-polyfill": "^6.26.0",
+    "classnames": "^2.2.6",
     "eslint-config-naver": "^2.1.0",
     "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0",
