--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.1",
     "sass-loader": "^10.0.4",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.2.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
